addons/scratch3to2/project.css
/* ... */
.guiPlayer + .preview-row {
  padding-bottom: 0;
}
.preview .preview-row .wrappable-item {
  margin-bottom: 2px;
}

/* Statistics */
.stats {
  line-height: 30px;
}
.project-loves,
.project-favorites,
.project-remixes,
.project-views {
  padding: 5px 15px;
  border-right: 1px solid var(--darkWww-border-15, #bbb);
  color: var(--darkWww-gray-scratchr2BlackText, black);
  font-size: 13px;
  font-weight: normal;
}
.project-loves::before,
.project-favorites::before,
.project-remixes::before,
.project-views::before {
  margin-right: 5px;
  width: 30px;
  height: 30px;
  background-image: url("https://cdn.scratch.mit.edu/scratchr2/static/images/stats-icons-dark.png");
  background-size: auto;
  filter: var(--darkWww-gray-filter, none);
}
.project-loves::before {
  background-position: 0 -57px;
}
.project-loves:hover::before,
.project-loves.loved::before {
  background-image: url("https://cdn.scratch.mit.edu/scratchr2/static/images/stats-icons-dark.png");
  background-position: 0 -84px;
  filter: none;
}
.project-favorites::before {
  background-position: 0 0;
}
.project-favorites:hover::before,
.project-favorites.favorited::before {
  background-image: url("https://cdn.scratch.mit.edu/scratchr2/static/images/stats-icons-dark.png");
  background-position: 0 -28px;
  filter: none;
}
.project-remixes::before {
  background-position: 0 -253px;
}
.project-views::before {
  background-position: 0 -225px;
}

/* Actions */
.subactions .share-date {
  margin: 0;
  padding: 5px 15px;
  border-right: 1px solid var(--darkWww-border-15, #bbb);
  color: var(--darkWww-gray-scratchr2BlackText, black);
  font-size: 13px;
  line-height: 30px;
}
.subactions .action-buttons {
  margin: 0;
  padding: 0;
}
.subactions .action-buttons .action-button {
  margin: 0;
  height: 30px;
  box-sizing: content-box;
  padding: 5px 15px;
  background-color: transparent;
  border-right: 1px solid var(--darkWww-border-15, #bbb);
  border-radius: 0;
  box-shadow: none;
  color: var(--darkWww-gray-scratchr2BlackText, black);
  text-shadow: var(--darkWww-gray-scratchr2TextShadow, 0 1px white);
  font-size: 13px;
  font-weight: normal;
}
.subactions .action-buttons > .action-button:last-child {
  border: none;
}
.subactions .action-buttons .action-button.studio-button::before,
.subactions .action-buttons .action-button.copy-link-button::before,
.subactions .action-buttons .action-button.report-button::before,
.sa-set-thumbnail-button::before,
.remixtree-button::before,
#sa-download-button::before {
  display: none;
}

/* Report modal */
.report-modal-content {
  width: calc(100% - 30px);
  font-size: 13px;
}
.report-modal-content .instructions {
  line-height: 20px;
}
.report-modal-content .action-buttons {
  margin: 0 -15px;
}

/* Add to Studio modal */
.mod-addToStudio {
  min-height: 0;
}
.addToStudio-modal-content {
  height: calc(100% - 42px);
}

/* Copy Link modal */
.mod-social {
  min-height: 0;
}
.social-modal-content {
  margin: 10px 15px;
  width: calc(100% - 30px);
  font-size: 13px;
}
.link-section {
  margin: 0;
}
.embed-section {
  margin-top: 15px;
}
.social-row {
  margin: 0;
}
.social-label-row {
  margin-bottom: 5px;
}
.social-label-title {
  font-size: 13px;
  color: var(--darkWww-box-scratchr2LabelText, #333);
}
.social-label-result {
  color: var(--darkWww-box-scratchr2GrayText, #888);
}
.social-form {
  padding: 4px;
  border-width: 1px;
  border-radius: 3px;
  font-size: 13px;
  line-height: 18px;
}
.social-form:focus {
  border: 1px solid var(--darkWww-border-15, rgba(0, 0, 0, 0.15));
  box-shadow: none;
}
.social-form.social-input {
  height: auto;
}
.social-form.social-textarea {
  height: 46px; /* two lines */
}

/* animated-thumb modal */
.sa-animated-thumb-popup-content {
  padding: 0;
}
.sa-animated-thumb-popup-actions button {
  border: 1px solid var(--darkWww-button-scratchr2, #855cd6);
}
.sa-animated-thumb-popup-actions button:hover {
  background-color: var(--darkWww-button-scratchr2Hover, #7854c0);
}

/* Extensions row */
.preview .project-notes .preview-row {
  /* Extension list is inside project notes on small screens */
  margin: 0;
  width: 100%;
  border-bottom: 1px solid var(--darkWww-border-15, #ccc);
}
.preview .extension-list {
  width: 100%;
  box-sizing: border-box;
  padding: 2px 7px;
  background-color: var(--darkWww-gray-scratchr2ProjectStatsBackground, #ddd);
  border-top: 1px solid var(--darkWww-border-15, #bbb);
  color: var(--darkWww-gray-scratchr2BlackText, black);
  text-shadow: var(--darkWww-gray-scratchr2TextShadow, 0 1px white);
}
.extension-chip {
  margin: 0;
  height: 30px;
  box-sizing: content-box;
  padding: 5px 15px;
  background-color: transparent;
  border-radius: 0;
  color: var(--darkWww-gray-scratchr2BlackText, black);
}
.extension-chip + .extension-chip {
  border-left: 1px solid var(--darkWww-border-15, #bbb);
}
.extension-chip .extension-icon {
  width: 30px;
  height: 30px;
}
.extension-chip .extension-content {
  margin: 0;
  font-size: 13px;
}
.extension-chip .extension-action {
  padding: 0;
  background-color: transparent;
  color: var(--darkWww-link-scratchr2, #855cd6);
  font-size: 10px;
}
.extension-chip .extension-action img {
  display: none;
}

/* Bottom area */
.preview .project-lower-container {
  margin: 0;
  padding: 0;
  padding-top: 20px;
  background-color: transparent;
}
.preview .comments-container,
.preview .remix-list,
.preview .studio-list {
  margin-bottom: 20px;
  box-sizing: border-box;
  border: 1px solid var(--darkWww-box-scratchr2Border, #e0e0e0);
  border-radius: 10px 10px 0 0;
  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.27);
}
/* ... */

